# noted

./: .gitignore  Cargo.toml  README.md  TODOLIST.md  build.rs
.github/workflows/: coverage.yml  coverage2.yml  rust.yml  rust_cached.yml  udeps.yml
data/: append_content.sql  bincode_db_100.bc  cbor_db_100.cbor  cbor_db_1000.cbor  cbor_db_10000.cbor  create_database.sql  dev.db  dev.fdb  dev.sqbpro  json_db_100.json  json_db_1000.json  json_db_10000.json  msgpack_db_100.rmp  msgpack_db_1000.rmp  msgpack_db_10000.rmp  new.db
data/testing/: test-cbor-100.db  test-cbor-1000.db  test-cbor-10000.db  test-json-100.db  test-json-1000.db  test-json-10000.db  test-msgpack-100.db  test-msgpack-1000.db  test-msgpack-10000.db
src/: lib.rs
src/bins/: mod.rs
src/bins/cli/: app.rs  mod.rs
src/bins/gui/: README.md  app.rs  hotkey.rs  mod.rs  settings.rs  theme.rs
src/bins/gui/backend/: back.rs  error.rs  mod.rs  msg.rs
src/bins/gui/widgets/: list.rs  mod.rs  msg.rs  note_editor.rs  screen_prompt.rs  simple_prompt.rs  time.rs  toaster.rs
src/bins/icli/: mod.rs
src/bins/icli/parts/: add_note.rs  delete_note.rs  edit_note.rs  list_notes.rs  list_tags.rs  menu.rs  mod.rs  pick_note.rs  update_note.rs  view_note.rs
src/bins/tui/: mod.rs
src/db/: file.rs  mod.rs  msg.rs  traits.rs
src/macros/: mod.rs
src/services/: input.rs  mod.rs  output.rs  repo.rs
src/term_ui/: mod.rs
src/term_ui/components/: mod.rs
src/term_ui/components/input/: mod.rs  state.rs
src/types/: error.rs  filter.rs  mod.rs  note.rs  note_dto.rs  order.rs  reminder.rs  taglist.rs  time.rs  traits.rs
src/types/api/: filter.rs  mod.rs  order.rs
src/types/changes/: mod.rs
src/util/: dtf.rs  id.rs  memo.rs  mod.rs  persist.rs  profiling.rs  scoped.rs
src/util/validation/: mod.rs
src/util/variadic/: mod.rs  one.rs  zero.rs
src/util/wrapping/: mod.rs
src/util/wrapping/signed/: mod.rs  n64.rs  n8.rs
src/util/wrapping/unsigned/: mod.rs  n16.rs  n32.rs  n64.rs  n8.rs  nsize.rs
