[package]
default-run = "runner"
edition = "2021"
name = "noted"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
bincode = "1.3.3"
bit-vec = { version = "0.6.3", features = ["serde"] }
bitflags = "1.3.2"
bson = "2.2.0"
bstr = { version = "0.2.17", features = ["serde"] }
ciborium = "0.2.0"
clap = { version = "3.1.12", features = [
    "cargo",
    # "debug",
    "derive",
    "terminal_size",
    "wrap_help",
    "unicode",
] }
color-eyre = "0.6.1"
copypasta = "0.7.1"
crossterm = { version = "0.23.2", features = ["event-stream", "serde"] }
dialoguer = { version = "0.10.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
fastrand = "1.7.0"
flame = { version = "0.2.2", optional = true }
flamer = { version = "0.4.0", optional = true }
flexbuffers = "2.0.0"
indicatif = { version = "0.16.2", features = ["improved_unicode"] }
inquire = "0.2.1"
jetscii = { version = "0.5.1", features = ["pattern"] }
minime = "0.2.0"
names = { version = "0.13.0", default-features = false }
nanorand = "0.7.0"
oorandom = "11.1.3"
postcard = "0.7.3"
rand = { version = "0.8.5", features = [
    "small_rng",
    "nightly",
    "simd_support",
    "min_const_gen",
] }
rayon = "1.5.2"
rmp = "0.8.11"
rmp-serde = "1.1.0"
rusqlite = { version = "0.27.0", features = [
    "bundled-windows",
    # "array",
    "backup",
    "blob",
    "collation",
    # "csvtab",
    # "extra_check",
    "functions",
    "hooks",
    "i128_blob",
    "limits",
    "load_extension",
    "serde_json",
    # "series",
    "time",
    "trace",
    # "unlock_notify",
    # "url",
    "uuid",
    # "vtab",
    "window",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
shadow-rs = "0.11.0"
sqlx = { version = "0.5.13", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "time",
    "bstr",
    "bit-vec",
] }
termimad = "0.20.1"
time = { version = "0.3.9", features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
    "serde",
] }
time-humanize = { version = "0.1.3", features = ["time"] }
tinyid = { version = "1.0.0", features = ["serde"] }
tokio = { version = "1.17.0", features = ["full"] }
tui = { version = "0.18.0", features = ["serde"] }
unicode-width = "0.1.9"
uuid = { version = "1.0.0", features = ["serde", "v4", "v5"] }
zi = "0.3.2"
zi-term = "0.3.2"

[dev-dependencies]
pretty_assertions = "1.2.1"

[build-dependencies]
shadow-rs = "0.11.0"

[features]
default = ["flame_on"]
flame_on = ["flame", "flamer"]

[profile.dev.package.backtrace]
opt-level = 3
