[package]
default-run = "runner"
edition = "2021"
name = "noted"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = [
    "cargo",
    # "debug",
    "derive",
    "terminal_size",
    "wrap_help",
    "unicode",
] }
color-eyre = "0.6.1"
concat-with = "0.2.7"
copypasta = "0.7.1"
crossbeam-channel = "0.5.4"
crossterm = { version = "0.23.2", features = ["event-stream", "serde"] }
dialoguer = { version = "0.10.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
directories = "4.0.1"
eframe = { version = "0.18.0", features = [
    "dark-light",
    "serde",
    "persistence",
] }
# egui = { version = "0.18.1", features = ["serde", "tracing", "persistence"] }
egui-toast = "0.2.0"
egui_commonmark = { version = "0.2.0", features = [
    "fetch",
    "svg",
    "syntax_highlighting",
] }
egui_extras = { version = "0.18.0", features = [
    "datepicker",
    "image",
    "serde",
    "svg",
] }
fastrand = "1.7.0"
flame = { version = "0.2.2", optional = true }
flamer = { version = "0.4.0", optional = true }
indicatif = { version = "0.16.2", features = ["improved_unicode"] }
inquire = "0.2.1"
jetscii = { version = "0.5.1", features = ["pattern"] }
log = { version = "0.4.17", features = ["std", "serde"] }
minime = "0.2.0"
once_cell = { version = "1.10.0", features = ["unstable"] }
parking_lot = "0.12.0"
puffin = { version = "0.13.2", optional = true, features = ["serialization"] }
puffin_http = { version = "0.10.0", optional = true }
rfd = "0.8.2"
rmp = "0.8.11"
rmp-serde = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
shadow-rs = "0.11.0"
termimad = "0.20.1"
time = { version = "0.3.9", features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
    "serde",
] }
tinyid = { version = "1.0.0", features = ["serde"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing = { version = "0.1.34", features = ["async-await", "log", "valuable"] }
tracing-serde = { version = "0.1.3", features = ["valuable"] }
tracing-subscriber = { version = "0.3.11", features = [
    "env-filter",
    "json",
    "time",
    "local-time",
    "serde",
    "serde_json",
    "time",
    "valuable",
    "valuable-serde",
] }
tui = { version = "0.18.0", features = ["serde"] }
unicode-width = "0.1.9"
uuid = { version = "1.0.0", features = ["serde", "v4", "v5"] }
valuable = { version = "0.1.0", features = ["derive"] }
valuable-serde = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"

[build-dependencies]
shadow-rs = "0.11.0"

[features]
default = []
flame = ["dep:flame", "dep:flamer"]
profile = ["flame", "puffin"]
puffin = ["dep:puffin", "dep:puffin_http", "eframe/puffin"]


[profile.dev.package.backtrace]
opt-level = 3
